<resources>
    <string name="app_name">MaterializedAttendance</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_event">Events</string>
    <string name="title_faculty">Faculty</string>
    <string name="title_settings">Settings</string>
    <string name="title_room">Room</string>
    <string name="title_schedule">Schedule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_staff_main">StaffMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Androidhive-->
    <string name="action_settings">Settings</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Automatic Sync</string>
    <string name="summary_upload_over_wifi">Upload data when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">A team of fourth year information technology students who aims to aid the IICS staff in Attendance Monitoring.</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="sync_data1">Sync Data</string>
    <string name="titlebackup_data">Backup Data</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="janina_bea_hernandez">Janina Bea Hernandez</string>
    <string name="bea_email">2014069977@ust-ics.mygbiz.com</string>
    <string name="mylene_domingo">Mylene Domingo</string>
    <string name="domingo_email">mjdomingo@ust-ics.mygbiz.com</string>
    <string name="events">Events</string>
    <string name="calendar">Calendar</string>
    <string name="faculty">Faculty</string>
    <string name="settings">Settings</string>
    <string name="sync_data">Sync Data</string>
    <string name="title_activity_faculty">FacultyActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="done">Done</string>
    <string name="todo">TODO</string>
    <string name="information_technology">Information Technology</string>
    <string name="jan">JAN</string>
    <string name="new_year">New Year</string>
    <string name="_01">01</string>
    <string name="sunday">SUNDAY</string>
    <string name="edit">Edit</string>
    <string name="might_be_rescheduled_if_earthquake_drill_pushes_thru">Might be rescheduled if earthquake drill pushes thru</string>
    <string name="seminar">Seminar</string>
    <string name="_1_00_pm_5_00_pm">1:00 PM - 5:00 PM</string>
    <string name="_4_january_2018">4 January 2018</string>
    <string name="room_314_roque_ruano">Room 314, Roque Ruano</string>
    <string name="seminar_about_first_aid_techniques">Seminar about first aid techniques</string>
    <string name="title_activity_add_event">addEventActivity</string>
    <string name="from">From</string>
    <string name="select">Select</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="venue">Venue</string>

    <string name="time">Time</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="attendance">Attendance</string>
    <string name="title_activity_faculty_details">FacultyDetailsActivity</string>
    <string name="eugenia_ramirez">Eugenia Ramirez</string>
</resources>
