<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/events" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/access_time"
            android:title="@string/title_schedule" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/attendance" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/sync_data" />
    </group>



</menu>
