<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hernandez.com.iics.materializedattendance.EventActivity"
    tools:showIn="@layout/activity_event">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/eventDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/description"
                        android:drawablePadding="10dp"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="15dp"
                        android:text="@string/seminar_about_first_aid_techniques"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/eventVenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_location_on_black_24dp"
                        android:drawablePadding="10dp"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="15dp"
                        android:text="@string/room_314_roque_ruano"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/eventDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/date_range"
                        android:drawablePadding="10dp"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="15dp"
                        android:text="@string/_4_january_2018"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/eventTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/access_time"
                        android:drawablePadding="10dp"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="15dp"
                        android:text="@string/_1_00_pm_5_00_pm"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/eventType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/chevron_right"
                        android:drawablePadding="10dp"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="15dp"
                        android:text="@string/seminar"
                        android:textSize="18sp"/>

                    <Button
                        android:id="@+id/btnEditEventDetails"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/edit" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/attendance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</android.support.constraint.ConstraintLayout>
