<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnSelectDate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hernandez.com.iics.materializedattendance.addEventActivity"
    tools:showIn="@layout/activity_add_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputEventName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/event_available"
                android:hint="@string/event_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputEventDesc"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/event_note"
                android:hint="@string/description"
                android:inputType="text"
                android:maxLines="2"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputEventVenue"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_location_on_black_24dp"
                android:hint="@string/venue"
                android:inputType="text"
                android:maxLines="2"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/txtFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/from" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="38dp"
            android:paddingEnd="35dp">

            <EditText
                android:id="@+id/inputEventDateFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableStart="@drawable/date_range"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                android:textSize="14sp" />
            <Button
                android:id="@+id/btnSelectDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/select"
                android:textSize="12sp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="38dp"
        android:paddingEnd="35dp">

        <EditText
            android:id="@+id/inputEventTimeFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableLeft="@drawable/access_time"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="time"
            android:textSize="14sp" />
        <Button
            android:id="@+id/btnSelectTym"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/select"
            android:textSize="12sp" />
    </LinearLayout>

        <TextView
            android:id="@+id/txtTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/to" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="38dp"
            android:paddingEnd="35dp">

            <EditText
                android:id="@+id/inputEventTimeTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableStart="@drawable/access_time"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                android:textSize="14sp" />
            <Button
                android:id="@+id/btnSelectTimeTo"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/select"
                android:textSize="12sp" />
        </LinearLayout>




        <Spinner
            android:id="@+id/selectEventType"
            android:layout_width="271dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="434dp" />









    </LinearLayout>
</ScrollView>
