<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/jan"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/date"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/month"
            android:layout_alignBottom="@+id/month"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/month"
            android:text="@string/_01"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/eventButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16" />

        <Button
            android:id="@+id/eventButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_alignBaseline="@+id/date"
            android:layout_alignBottom="@+id/date"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/date"
            android:onClick="onClickEventButton"
            android:text="@string/new_year"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sunday"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/date"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="@+id/month"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.578" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
